testing/Travis/testcases/prototype/shouldSucceed/try43a.adl
CONTEXT Try43 IN ENGLISH
RELATION r[B*A] [UNI]
RELATION s[A*C] [UNI]
RELATION t[A*D] [UNI]

INTERFACE Try43  : I[ONE];V[ONE*B]
BOX
[ foo : r /\ r;(s;s~ /\ t;t~ )
]

ENDCONTEXT